Updating with new code

--- a/Assignment-13-1.ipynb
+++ b/Assignment-13-1.ipynb
@@ -147,12 +147,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "738F7JqM4-Vf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Pandas version :  2.2.3\n",
+      "Gurobi version :  12.0.2\n",
+      "IPython version:  2.2.3\n",
+      "Warnings are suppressed\n",
+      "Deprecation warnings are suppressed\n"
+     ]
+    }
+   ],
    "source": [
+    "%pip uninstall --yes --quiet gurobipy\n",
+    "%pip install         --quiet gurobipy\n",
+    "\n",
+    "%pip uninstall --yes --quiet pandas\n",
+    "%pip install         --quiet pandas\n",
+    "\n",
+    "%pip uninstall --yes --quiet ipython\n",
+    "%pip install         --quiet ipython\n",
+    "\n",
     "import pandas          as     pd  # type: ignore\n",
     "import gurobipy        as     gp  # type: ignore\n",
     "from   gurobipy        import GRB # type: ignore\n",
@@ -160,7 +187,14 @@
     "import warnings\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
-    "warnings.filterwarnings('ignore', category=DeprecationWarning)"
+    "warnings.filterwarnings('ignore', category=DeprecationWarning)\n",
+    "\n",
+    "print('Pandas version : ', pd.__version__)\n",
+    "print('Gurobi version : ', gp.__version__)\n",
+    "print('IPython version: ', pd.__version__)\n",
+    "\n",
+    "print(\"Warnings are suppressed\")\n",
+    "print(\"Deprecation warnings are suppressed\")\n"
    ]
   },
   {
@@ -192,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "id": "SzWBwmR44-Vg"
    },
@@ -276,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -294,15 +328,7 @@
     "id": "nAG_57KN4-Vi",
     "outputId": "f116aac3-5da2-4b00-a4b4-77fb366b08ac"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Restricted license - for non-production use only - expires 2026-11-23\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = gp.Model('SupplyNetworkDesign')\n",
     "flow  = model.addVars(arcs, obj=cost, name=\"flow\")"
@@ -336,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "id": "3hecBmI24-Vo"
    },
@@ -376,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "id": "69oIgEpB4-Vt"
    },
@@ -418,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "id": "3I9pD1Fo4-Vv"
    },
@@ -456,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "id": "6ekHOrf34-Vx"
    },
@@ -495,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -518,19 +544,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gurobi Optimizer version 12.0.1 build v12.0.1rc0 (mac64[arm] - Darwin 24.5.0 24F5053j)\n",
+      "Gurobi Optimizer version 12.0.2 build v12.0.2rc0 (mac64[arm] - Darwin 24.5.0 24F74)\n",
       "\n",
       "CPU model: Apple M4 Max\n",
       "Thread count: 16 physical cores, 16 logical processors, using up to 16 threads\n",
       "\n",
       "Optimize a model with 16 rows, 29 columns and 65 nonzeros\n",
+      "Model fingerprint: 0x6a0e70a2\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+00]\n",
       "  Objective range  [4e-01, 2e+00]\n",
       "  Bounds range     [0e+00, 0e+00]\n",
       "  RHS range        [2e+04, 4e+05]\n",
+      "Presolve removed 1 rows and 0 columns\n",
+      "Presolve time: 0.00s\n",
+      "Presolved: 15 rows, 29 columns, 64 nonzeros\n",
       "\n",
-      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0    3.8200000e+05   3.625000e+04   0.000000e+00      0s\n",
+      "       7    5.4100000e+05   0.000000e+00   0.000000e+00      0s\n",
+      "\n",
+      "Solved in 7 iterations and 0.00 seconds (0.00 work units)\n",
       "Optimal objective  5.410000000e+05\n"
      ]
     }
@@ -605,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -658,8 +692,7 @@
          "type": "float"
         }
        ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "a2fc1de2-99de-45f6-9e02-03b4a06b6d2c",
+       "ref": "10287eef-d26c-41c7-b8b5-dd519f997a2b",
        "rows": [
         [
          "",
@@ -876,8 +909,7 @@
          "type": "float"
         }
        ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "0addea53-058d-4625-b9ca-79d96b5326e8",
+       "ref": "af5d16a7-3dc0-473a-8682-d1d7b3c191f9",
        "rows": [
         [
          "",
@@ -1149,7 +1181,7 @@
    ]
   },
   "kernelspec": {
-   "display_name": "eneas",
+   "display_name": "test1",
    "language": "python",
    "name": "python3"
   },
@@ -1163,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
